style copyright section

--- a/style.css
+++ b/style.css
@@ -6,12 +6,29 @@ body {
 
 .nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
   border: 2px solid black;
+  padding: 0 12px;
   width: 40%;
   margin: 2px;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+}
+
+a:active, a:hover {
+  color: blue;
+}
+
+
+.lined {
+  border-right: 2px solid black;
+  padding-right: 5px;
 }
 
 .book-list {
@@ -76,6 +93,9 @@ hr {
 }
 
 .footer {
-  position:relative;
-  left: -218px;
+  box-sizing: border-box;
+  border: 2px solid black;
+  width: 40%;
+  margin: 20px 0;
+  padding-left: 12px;
 }
